@@ -1,3 +1,7 @@
+2008/01/31
+	Added two requests to make a joint visible or transparent.
+	Unsuccessfully tried to destroy correctly Corba objects in order to rebuild them but failed.
+	
 2008/01/10
 	Added recently developed roadmap builders in ChppciProblem::setRoadmapbuilder.
 2007/11/19
